Go over packaging: ChangeLogs for ruby-debug-base (in ext and lib) separate from CLI ChangeLog ChangeLogs now map userid to names ruby-debug-base regression test included in ruby-debug-base Columnize test separated. (It will disappear when ruby-debug requires it as an external)

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,4 +2,6 @@ SUBDIRS = doc emacs
 PHONY = ChangeLog test
 test: check
 ChangeLog:
-	svn2cl 
+	svn2cl --authors=svn2cl_usermap svn://rubyforge.org/var/svn/ruby-debug/trunk
+	svn2cl --authors=svn2cl_usermap svn://rubyforge.org/var/svn/ruby-debug/trunk/ext -o ext/ChangeLog
+	svn2cl --authors=svn2cl_usermap svn://rubyforge.org/var/svn/ruby-debug/trunk/lib -o lib/ChangeLog
