rdebug-vars.el: remove cut-and-paste artifact rest: rdebug-test-frame.el -> rdebug-test-cmd.el

--- a/emacs/Makefile.am
+++ b/emacs/Makefile.am
@@ -17,7 +17,7 @@
 
 lisp_files = rdebug.el rdebug-cmd.el rdebug-core.el \
              rdebug-regexp.el rdebug-track.el rdebug-vars.el
-check_DATA = elk-test.el rdebug-test.el rdebug-test-frame.el rdebug-test-regexp.el
+check_DATA = elk-test.el rdebug-test.el rdebug-test-cmd.el rdebug-test-regexp.el
 EXTRA_DIST = $(lisp_files) $(check_DATA)
 ELCFILES   = rdebug.elc rdebug-cmd.elc rdebug-core.elc \
              rdebug-regexp.el rdebug-track.elc rdebug-vars.elc
@@ -32,6 +32,6 @@ test: check
 check:
 	(cd $(srcdir) && \
 	$(EMACS) -batch -q -l rdebug-test.el elk-test.el ; \
-	$(EMACS) -batch -q -l rdebug-test-frame.el elk-test.el ; \
+	$(EMACS) -batch -q -l rdebug-test-cmd.el elk-test.el ; \
 	$(EMACS) -batch -q -l rdebug-test-regexp.el elk-test.el )
 
