Missing a backslash to continue a line.

--- a/emacs/Makefile.am
+++ b/emacs/Makefile.am
@@ -16,7 +16,7 @@
 #$Id: Makefile.am,v 1.10 2007/04/13 00:59:33 rockyb Exp $
 
 lisp_files = rdebug.el rdebug-cmd.el rdebug-core.el \
-             rdebug-regexp.el rdebug-source.el
+             rdebug-regexp.el rdebug-source.el \
 	     rdebug-track.el rdebug-vars.el
 check_DATA = test/elk-test.el \
 	test/test-cmd.el    \
