rdebug-layouts.rb, Makefile.am: window layouts - split off from rdebug-core.el Add some output commands: command to add a marker line, clear the output window, and allow undo.

--- a/emacs/Makefile.am
+++ b/emacs/Makefile.am
@@ -15,18 +15,28 @@
 #   Foundation, 59 Temple Place, Suite 330, Boston, MA 02111 USA.
 #$Id: Makefile.am,v 1.10 2007/04/13 00:59:33 rockyb Exp $
 
-lisp_files = rdebug.el rdebug-cmd.el rdebug-core.el \
-             rdebug-regexp.el rdebug-source.el \
-	     rdebug-track.el rdebug-vars.el
-check_DATA = test/elk-test.el \
-	test/test-cmd.el    \
-	test/test-core.el   \
-	test/test-indent.el \
+lisp_files = rdebug.el \
+	     rdebug-cmd.el 	\
+	     rdebug-core.el 	\
+	     rdebug-layouts.el	\
+             rdebug-regexp.el	\
+	     rdebug-source.el	\
+	     rdebug-track.el 	\
+	     rdebug-vars.el
+check_DATA = test/elk-test.el	\
+	test/test-cmd.el    	\
+	test/test-core.el   	\
+	test/test-indent.el 	\
 	test/test-regexp.el
 EXTRA_DIST = $(lisp_files) $(check_DATA)
-ELCFILES   = rdebug.elc rdebug-cmd.elc rdebug-core.elc \
-             rdebug-regexp.elc  rdebug-source.elc \
-	     rdebug-track.elc rdebug-vars.elc
+ELCFILES   = rdebug.elc 	\
+	     rdebug-cmd.elc 	\
+	     rdebug-core.elc 	\
+	     rdebug-layouts.elc	\
+             rdebug-regexp.elc	\
+	     rdebug-source.elc	\
+	     rdebug-track.elc 	\
+	     rdebug-vars.elc
 if INSTALL_EMACS_LISP
 lisp_LISP = $(lisp_files)
 endif
