Create errmsg routine for error output, start tagging error messages as errors. Under annotate 3, output errors similar to gdb --annotate does (although still simplified).  Have Emacs pick up debugger error annotations.

--- a/emacs/Makefile.am
+++ b/emacs/Makefile.am
@@ -17,8 +17,9 @@
 
 lisp_files = rdebug.el \
 	     rdebug-breaks.el 	\
-	     rdebug-dbg.el 	\
 	     rdebug-core.el 	\
+	     rdebug-dbg.el 	\
+	     rdebug-error.el 	\
 	     rdebug-frames.el 	\
 	     rdebug-gud.el 	\
 	     rdebug-help.el 	\
@@ -41,6 +42,7 @@ ELCFILES   = rdebug.elc 		\
 	     rdebug-breaks.elc 		\
 	     rdebug-core.elc 		\
 	     rdebug-dbg.elc 		\
+	     rdebug-error.elc		\
 	     rdebug-gud.elc 		\
 	     rdebug-frames.elc 		\
 	     rdebug-help.elc 		\
