Go over installation instructions for Emacs. Add a basic files, README, INSTALL and AUTHORS. Change version from 0.10.4vc to 0.10.4rc1

--- a/emacs/Makefile.am
+++ b/emacs/Makefile.am
@@ -48,7 +48,7 @@ check_DATA = test/elk-test.el	\
 	test/test-regexp.el 	\
 	test/test-shortkey.el
 
-EXTRA_DIST = $(lisp_files) $(check_DATA)
+EXTRA_DIST = $(lisp_files) $(check_DATA) README AUTHORS INSTALL
 ELCFILES   = rdebug.elc 		\
 	     rdebug-annotate.elc	\
 	     rdebug-breaks.elc 		\
